[gd_scene load_steps=70 format=3 uid="uid://be281pixkehmv"]

[ext_resource type="Texture2D" uid="uid://b8vq3s7hrhgj2" path="res://Assets/topdown_textures/topdown_character.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://c5ckqxptboifi" path="res://Scenes/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cragncbbgddo" path="res://Assets/KnightL/Outline/120x80_PNGSheets/_Idle.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://ctyyiru6lbmso" path="res://Assets/KnightL/NoOutline/120x80_PNGSheets/_Idle.png" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://d2tphw3pjpcs7" path="res://Assets/KnightL/NoOutline/120x80_PNGSheets/_Run.png" id="4_fkybt"]
[ext_resource type="Texture2D" uid="uid://ds4g6ouqloe57" path="res://Assets/KnightL/NoOutline/120x80_PNGSheets/_Roll.png" id="4_x3wgy"]
[ext_resource type="Texture2D" uid="uid://chyy450ljionb" path="res://Assets/Archer/GandalfHardcore Archer black sheet.png" id="7_3smsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_vgqql")
region = Rect2(120, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_vgqql")
region = Rect2(240, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_vgqql")
region = Rect2(360, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_vgqql")
region = Rect2(480, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_vgqql")
region = Rect2(600, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_vgqql")
region = Rect2(720, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_vgqql")
region = Rect2(840, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_vgqql")
region = Rect2(960, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("3_vgqql")
region = Rect2(1080, 40, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(120, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(240, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_6t5aa")
region = Rect2(360, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(600, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_6t5aa")
region = Rect2(720, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_6t5aa")
region = Rect2(840, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(960, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("3_6t5aa")
region = Rect2(1080, 40, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("4_x3wgy")
region = Rect2(0, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("4_x3wgy")
region = Rect2(98, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("4_x3wgy")
region = Rect2(343, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("4_x3wgy")
region = Rect2(588, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("4_x3wgy")
region = Rect2(833, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("4_x3wgy")
region = Rect2(931, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("4_x3wgy")
region = Rect2(1078, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("4_x3wgy")
region = Rect2(1176, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("4_x3wgy")
region = Rect2(1323, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("4_x3wgy")
region = Rect2(245, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("4_x3wgy")
region = Rect2(441, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("4_x3wgy")
region = Rect2(686, 40, 49, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("4_fkybt")
region = Rect2(120, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("4_fkybt")
region = Rect2(240, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("4_fkybt")
region = Rect2(360, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("4_fkybt")
region = Rect2(480, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("4_fkybt")
region = Rect2(600, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("4_fkybt")
region = Rect2(720, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("4_fkybt")
region = Rect2(840, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("4_fkybt")
region = Rect2(960, 40, 30, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("4_fkybt")
region = Rect2(1080, 40, 30, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dp3o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"idle_outline",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}],
"loop": false,
"name": &"rolling",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}],
"loop": true,
"name": &"rolling_2",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}],
"loop": true,
"name": &"running",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fkybt"]
radius = 0.4

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("7_3smsa")
region = Rect2(0, 21, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlem"]
atlas = ExtResource("7_3smsa")
region = Rect2(64, 21, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeqe"]
atlas = ExtResource("7_3smsa")
region = Rect2(128, 21, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x828"]
atlas = ExtResource("7_3smsa")
region = Rect2(192, 21, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1k8q"]
atlas = ExtResource("7_3smsa")
region = Rect2(256, 21, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_lisdf"]
atlas = ExtResource("7_3smsa")
region = Rect2(416, 273, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1x1j"]
atlas = ExtResource("7_3smsa")
region = Rect2(480, 273, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8b32"]
atlas = ExtResource("7_3smsa")
region = Rect2(544, 273, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj1g2"]
atlas = ExtResource("7_3smsa")
region = Rect2(608, 273, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6mvm"]
atlas = ExtResource("7_3smsa")
region = Rect2(0, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lvd"]
atlas = ExtResource("7_3smsa")
region = Rect2(64, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7r7"]
atlas = ExtResource("7_3smsa")
region = Rect2(128, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3lt"]
atlas = ExtResource("7_3smsa")
region = Rect2(192, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_pukcj"]
atlas = ExtResource("7_3smsa")
region = Rect2(256, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_1htnp"]
atlas = ExtResource("7_3smsa")
region = Rect2(320, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_m376e"]
atlas = ExtResource("7_3smsa")
region = Rect2(384, 149, 32, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b312"]
atlas = ExtResource("7_3smsa")
region = Rect2(448, 149, 32, 43)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxncu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vlem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1k8q")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lisdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1x1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8b32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj1g2")
}],
"loop": false,
"name": &"rolling",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6mvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57lvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq3lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pukcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1htnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m376e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b312")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(302, 182)
scale = Vector2(10, 10)
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.300001, 0.8)
scale = Vector2(0.5, 0.465)
sprite_frames = SubResource("SpriteFrames_7dp3o")
animation = &"rolling"
autoplay = "idle"
frame = 8
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -10.7143)
texture = ExtResource("1_4flbx")
offset = Vector2(0, 10.7143)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AttackSpeedCD" type="Timer" parent="."]
one_shot = true

[node name="AttackAnimation" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.2964e-06, 0)
shape = SubResource("CircleShape2D_fkybt")

[node name="I-time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RollCD" type="Timer" parent="."]
one_shot = true

[node name="RollDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RotationCharacter" type="CharacterBody2D" parent="."]
visible = false

[node name="archer" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(4.76837e-07, 4.76837e-07)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_dxncu")
animation = &"rolling"
autoplay = "idle"

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="RollDuration" to="." method="_on_roll_duration_timeout"]
